# atomic-sand

./: .gitmodules  awesome.sh  build_run.sh  meson.build
src/: main.c  meson.build
src/game_loop/: game_loop.c  game_loop.h  meson.build
src/lib/: meson.build  simulation_structures.h  state.h  wiring.h
src/lib/particles/: meson.build  null_particle.c  null_particle.h  sand_particle.c  sand_particle.h
src/simulation/: meson.build  pixel_dynamics_simulator.c  pixel_dynamics_simulator.h
